welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: illegal start of simple expression
  var n=;
        ^max2Value:3: error: illegal start of simple expression
  var l=;
        ^